--- a/html-1/css/custom.css
+++ b/html-1/css/custom.css
@@ -580,10 +580,14 @@
       #footer h3 {
         font-size: 20px;
       }
-
+      #footer  .col-md-6 {
+    -ms-flex: 0 0 50%;
+    flex: 0 0 50%;
+    max-width: inherit;
+}
       #footer p {
-        font-size: 8px;
-        margin-left: inherit;
+        font-size: 16px;
+        margin-left: 40px;
       }
 
       #amazingPosition p {
@@ -726,7 +730,9 @@
         width: 60px;
         height: 60px;
       }
-
+.timeline-nodes {
+     padding-left: inherit;
+}
       .timeline .x {
         content: "";
         width: 75px;
@@ -763,6 +769,7 @@
         font-weight: 700;
         padding-top: 180px;
         margin: auto;
+            margin-top: 90px;
       }
 
       #title p {
@@ -804,7 +811,9 @@
         padding-right: 25px;
         padding-top: 20px;
       }
-
+#footer .col-md-6 {
+    -ms-flex: 0 0 50%;
+  flex: 0 0 100%;}
       #footer button {
         width: 100%;
       }
@@ -843,21 +852,19 @@
       #header h2 {
         float: none;
         margin-top: 40px;
-        padding-left: 45px;
+        padding-left: inherit;
         margin-right: inherit;
         margin-bottom: 20px;
         font-family: Bello Script;
         color: #ffffff;
         font-size: 36px;
-        line-height: 19px;
+        line-height: 0px;
         text-align: center;
       }
 
-      #header li {
-        display: inline-block;
-        padding-left: 44px;
-      }
-
+     #amazingPosition p {
+  text-align: inherit; 
+}
       #amazingPosition .text0 {
         /* padding-top: 40px;
  padding-left:0px;
@@ -870,8 +877,15 @@
         width: 100%;
         height: 1px;
       }
+ #header li {
+            border: 1px solid;
+           display: block;
+        padding-left: 44px;
+      }
 
       #header ul {
-        margin-top: 20px;
+            margin-right: 50px;
+        margin-top: inherit;
+            width: -webkit-fill-available;
       }
     }
