--- a/html-1/css/custom.css
+++ b/html-1/css/custom.css
@@ -51,7 +51,14 @@
   margin-top: 40px;
   float: right;
 }
-
+aditionalUl{
+  padding: 120px;
+  
+}
+ .navbarPadding{
+        margin-right: 46px;
+    margin-top: 36px;
+  }
 #header li {
   /* display: inline-block;*/
   padding-left: 0px;
@@ -266,12 +273,12 @@
 }
 
 #footer form {
-  width: 456px;
+  width: 475px;
   padding-bottom: 20px;
 }
 
 #footer .info {
-  padding-left: 229px;
+  padding-left: 190px;
   padding-right: 229px;
   padding-top: 100px;
 }
@@ -617,7 +624,23 @@ hr .footerhr {
 }
 
 /*tab walata */
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1025px) {
+  .navbarPadding {
+    margin-right: 46px;
+    margin-left: 90px;
+    margin-top: inherit!important;
+}
+  .fixed-nav-bar {
+    height: inherit;
+    transition: 2s;
+    background-color: black;
+  }
+
+  .lastP {
+    margin-left: inherit!important;
+    text-align: center !important;
+    padding-bottom: 32px !important;
+}
   .middleImg {
     margin-left: 50px;
     margin-right: 50px;
@@ -717,6 +740,7 @@ hr .footerhr {
     margin-top: inherit;
     float: right;
   }
+ 
 
   #title h1 {
     margin-left: 0px;
@@ -769,7 +793,13 @@ hr .footerhr {
 }
 
 /*phones walata */
-@media screen and (max-width: 575px) {
+@media screen and (max-width: 640px) {
+
+  .navbarPadding{
+     margin-left: inherit;
+        margin-right: 46px;
+    margin-top: inherit;
+  }
   .lastP {
     text-align: center !important;
     padding-bottom: 32px !important;
@@ -812,6 +842,50 @@ hr .footerhr {
     /*Add your own background*/
   }
 
+  
+  
+  .timeline-nodes {
+    padding-left: 105px;
+  }
+  .timeline-nodes:nth-child(odd) h3,
+  .timeline-nodes:nth-child(odd) p {
+    text-align: left;
+  }
+  .timeline-nodes:nth-child(even) {
+    flex-direction: row;
+  }
+  .timeline::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 4%;
+    width: 0;
+    border-left: 2px solid;
+    height: 100%;
+    z-index: 1;
+    transform: translateX(-50%);
+  }
+  .timeline h3 {
+    font-size: 1.7rem;
+  }
+  .timeline p {
+    font-size: 14px;
+  }
+  .timeline-image {
+    position: absolute;
+    left: 0%;
+    top: 60px;
+    transform: translateX(-50%;);
+  }
+  .timeline-nodes:nth-child(even) .timeline-date {
+    text-align: left;
+  }
+  .timeline-image::before {
+    width: 65px;
+    height: 65px;
+  }
+  
   .timeline::before {
     content: "";
     display: block;
