--- a/html-1/css/custom.css
+++ b/html-1/css/custom.css
@@ -386,10 +386,11 @@ aditionalUl {
 
 #footer button {
   clear: both;
-  margin-bottom: 50px;
-  margin-top: 20px;
+
+  margin-top: 20px!important;
   background-color: #35c2f8;
   width: 187px !important;
+ 
   height: 50px !important;
   border: 0px;
   border-radius: 45px;
@@ -692,7 +693,7 @@ hr .footerhr {
   .navbarPadding {
     margin-right: 46px;
     margin-left: 90px;
-    margin-top: inherit !important;
+ /*   margin-top: inherit !important;*/
   }
 
   .fixed-nav-bar {
@@ -802,7 +803,7 @@ hr .footerhr {
     margin-top: inherit;
     margin-left: inherit;
     margin-right: inherit;
-    margin-bottom: inherit;
+    /*margin-bottom: inherit;*/
   }
 
   #header h2 {
@@ -1053,7 +1054,7 @@ hr .footerhr {
   }
 
   #title p {
-    margin: auto;
+    /*margin: auto;*/
     font-family: 'Noto Sans';
     color: #cccccc;
     font-size: 15px;
@@ -1181,8 +1182,8 @@ hr .footerhr {
   }
 }
 
-@media screen and (min-width: 1366px) and (max-width: 640px) {
-  
+@media screen and (min-width: 1300) and (max-width: 1366px) {
+ 
   .expert {
     padding-left: auto;
   }
