--- a/html-1/css/custom.css
+++ b/html-1/css/custom.css
@@ -325,7 +325,7 @@ aditionalUl {
 #otherExpertPosition .text2 {
   font-family: 'Noto Sans';
   color: #777777;
-  font-size: 18px;
+  font-size: 15px;
   font-weight: 400;
   text-align: left;
   padding-bottom: 30px;
@@ -374,9 +374,10 @@ aditionalUl {
 }
 
 #footer h2 {
+  letter-spacing: 1px;
   font-family: 'Noto Sans';
   color: #ffffff;
-  font-size: 16px;
+  font-size: 15px;
   font-weight: 400;
   line-height: 18px;
   text-align: left;
@@ -437,7 +438,7 @@ aditionalUl {
 .expert p {
   font-family: 'Noto Sans';
   color: #777777;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 400;
   text-align: left;
   padding-top: 5px;
@@ -658,6 +659,8 @@ hr .footerhr {
 #lastLine {
   background-color: #ffffff;
   width: 100%;
+      margin-left: 15px;
+    margin-right: 15px;
   /*width: 1018px;
 
   margin-left: 18px;*/
@@ -672,7 +675,30 @@ hr .footerhr {
 }
 
 /*tab walata */
-@media screen and (max-width: 1025px) {
+
+@media screen and (max-width: 1024px) {
+  #title h1 {margin-left: 0px; 
+     margin-right: 0px; }
+  #header h2 {    margin-right: 224px;}
+   #header li {
+    /* display: inline-block; */
+    padding-left: 0px;
+    padding-right: 25px;
+}
+}
+
+
+@media screen and (max-width: 1000px) {
+  #beautiful img {
+ padding-left: 0px;
+}
+  #beautiful p {
+   PADDING-LEFT: 0px; }
+  #beautiful h2 {
+    PADDING-LEFT: 0px;}
+  #amazingPosition h2 {
+    padding-left: 15px;
+  }
   #header li {
     /* display: inline-block; */
     padding-left: 0px;
@@ -709,8 +735,8 @@ hr .footerhr {
   }
 
   .middleImg {
-    margin-left: 50px;
-    margin-right: 50px;
+    margin-left: 15px;
+    margin-right: 15px;
   }
 
   #footer .info {
@@ -751,7 +777,7 @@ hr .footerhr {
     line-height: 18px;
     text-align: left;
   }
-
+/*
   #amazingPosition p {
     text-align: right;
   }
@@ -759,7 +785,7 @@ hr .footerhr {
   #amazingPosition h2 {
     text-align: right;
   }
-
+*/
   #amazingPosition h1 {
     text-align: center;
   }
@@ -1162,7 +1188,7 @@ hr .footerhr {
     background-color: #ffffff;
     width: 100%;
     height: 1px;
-    margin-left: 0px;
+   
   }
 
   #header li {
@@ -1182,7 +1208,30 @@ hr .footerhr {
   }
 }
 
-@media screen and (min-width: 1300) and (max-width: 1366px) {
+
+@media screen and (min-width: 1600px) {
+  #lastLine {
+  /*  height: 2px;*/
+  }
+  #otherExpertPosition .ebutton {
+       width: auto;
+    
+  }
+  #footer button {
+
+    width: auto!important;
+    height: auto!important;}
+  body {
+   /* background-color: red;*/
+  }
+  #header li {
+  
+    padding-right: 14px!important;
+}
+}
+
+/*
+@media screen and (min-width: 1300) and (max-width: 1600px) {
  
   .expert {
     padding-left: auto;
@@ -1205,3 +1254,4 @@ hr .footerhr {
     padding-top: 100px;
   }
 }
+*/
