--- a/html-1/css/custom.css
+++ b/html-1/css/custom.css
@@ -47,7 +47,7 @@ html {
   left: 0;
   z-index: 9999;
   width: 100%;
-  height: 86px;
+     height: 68px;
   transition: 2s;
 }
 
@@ -388,10 +388,10 @@ aditionalUl {
 #footer button {
   clear: both;
 
-  margin-top: 20px!important;
+  margin-top: 20px !important;
   background-color: #35c2f8;
   width: 187px !important;
- 
+
   height: 50px !important;
   border: 0px;
   border-radius: 45px;
@@ -659,8 +659,8 @@ hr .footerhr {
 #lastLine {
   background-color: #ffffff;
   width: 100%;
-      margin-left: 15px;
-    margin-right: 15px;
+  margin-left: 15px;
+  margin-right: 15px;
   /*width: 1018px;
 
   margin-left: 18px;*/
@@ -677,33 +677,46 @@ hr .footerhr {
 /*tab walata */
 
 @media screen and (max-width: 1024px) {
-  #title h1 {margin-left: 0px; 
-     margin-right: 0px; }
-  #header h2 {    margin-right: 224px;}
-   #header li {
+  #title h1 {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+
+  #header h2 {
+    margin-right: 224px;
+  }
+
+  #header li {
     /* display: inline-block; */
     padding-left: 0px;
     padding-right: 25px;
-}
+  }
 }
 
 
 @media screen and (max-width: 1000px) {
   #beautiful img {
- padding-left: 0px;
-}
+    padding-left: 0px;
+  }
+
   #beautiful p {
-   PADDING-LEFT: 0px; }
+    PADDING-LEFT: 0px;
+  }
+
   #beautiful h2 {
-    PADDING-LEFT: 0px;}
+    PADDING-LEFT: 0px;
+  }
+
   #amazingPosition h2 {
     padding-left: 15px;
   }
+
   #header li {
     /* display: inline-block; */
     padding-left: 0px;
     padding-right: 5px;
-}
+  }
+
   #otherExpertPosition .ebutton {
     margin-left: 0px;
 
@@ -719,7 +732,7 @@ hr .footerhr {
   .navbarPadding {
     margin-right: 46px;
     margin-left: 90px;
- /*   margin-top: inherit !important;*/
+    /*   margin-top: inherit !important;*/
   }
 
   .fixed-nav-bar {
@@ -777,7 +790,8 @@ hr .footerhr {
     line-height: 18px;
     text-align: left;
   }
-/*
+
+  /*
   #amazingPosition p {
     text-align: right;
   }
@@ -1188,7 +1202,7 @@ hr .footerhr {
     background-color: #ffffff;
     width: 100%;
     height: 1px;
-   
+
   }
 
   #header li {
@@ -1211,23 +1225,28 @@ hr .footerhr {
 
 @media screen and (min-width: 1600px) {
   #lastLine {
-  /*  height: 2px;*/
+    /*  height: 2px;*/
   }
+
   #otherExpertPosition .ebutton {
-       width: auto;
-    
+    width: auto;
+
   }
+
   #footer button {
 
-    width: auto!important;
-    height: auto!important;}
-  body {
-   /* background-color: red;*/
+    width: auto !important;
+    height: auto !important;
   }
+
+  body {
+    /* background-color: red;*/
+  }
+
   #header li {
-  
-    padding-right: 14px!important;
-}
+
+    padding-right: 14px !important;
+  }
 }
 
 /*
